--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "expo": "~54.0.10",
+    "expo-crypto": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "ethers": "5.7.2",
+    "@ethersproject/shims": "5.6.0",
+    "babel-plugin-react-require": "4.0.0",
+    "@babel/plugin-proposal-numeric-separator": "7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "7.21.0",
+    "@babel/plugin-proposal-export-namespace-from": "7.18.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
