--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/plugin-proposal-optional-chaining": "7.21.0",
     "@ethersproject/shims": "5.6.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
     "babel-plugin-react-require": "4.0.0",
     "ethers": "5.7.2",
     "expo": "~54.0.10",
@@ -24,6 +26,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
