--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-optional-chaining": "7.21.0",
     "@ethersproject/shims": "5.6.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "babel-plugin-react-require": "4.0.0",
