--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.76.3",
     "ethers": "5.7.2",
     "expo-crypto": "~14.1.5",
+    "expo-clipboard": "~7.0.0",
     "expo-router": "~5.1.7",
     "expo-status-bar": "~2.2.3",
     "@expo/vector-icons": "^14.1.0",
@@ -24,7 +25,6 @@
     "babel-plugin-react-require": "4.0.0",
     "@react-navigation/native-stack": "^7.3.26",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-clipboard/clipboard": "^1.16.3",
     "@babel/plugin-proposal-numeric-separator": "7.16.7",
     "@babel/plugin-proposal-optional-chaining": "7.21.0",
     "@react-native-async-storage/async-storage": "2.1.2",
