--- a/package.json
+++ b/package.json
@@ -9,31 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.3",
-    "ethers": "5.7.2",
-    "expo-crypto": "~14.1.5",
-    "expo-clipboard": "~7.0.0",
-    "expo-router": "~5.1.7",
-    "expo-status-bar": "~2.2.3",
-    "@expo/vector-icons": "^14.1.0",
-    "@ethersproject/shims": "5.6.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-clipboard": "^0.0.5",
-    "@react-navigation/native": "^7.1.17",
-    "babel-plugin-react-require": "4.0.0",
-    "@react-navigation/native-stack": "^7.3.26",
-    "react-native-safe-area-context": "5.4.0",
-    "@babel/plugin-proposal-numeric-separator": "7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "7.21.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
     "@babel/plugin-proposal-export-namespace-from": "7.18.9",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
-    "expo-font": "~13.3.2"
+    "@babel/plugin-proposal-numeric-separator": "7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "7.21.0",
+    "@ethersproject/shims": "5.6.0",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "babel-plugin-react-require": "4.0.0",
+    "ethers": "5.7.2",
+    "expo": "~54.0.0",
+    "expo-clipboard": "~8.0.7",
+    "expo-crypto": "~15.0.7",
+    "expo-font": "~14.0.8",
+    "expo-router": "~6.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "^0.81.4",
+    "react-native-clipboard": "^0.0.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.10",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "typescript": "~5.9.2"
   },
   "private": true
