--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ethersproject/shims": "5.6.0",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "babel-plugin-react-require": "4.0.0",
