--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-clipboard": "^0.0.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
