--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-clipboard": "~8.0.7",
     "expo-crypto": "~15.0.7",
     "expo-font": "~14.0.8",
+    "expo-image-picker": "^17.0.8",
     "expo-router": "~6.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
