--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-clipboard": "^0.0.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-super-grid": "^6.0.2",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0"
   },
