--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write .",
@@ -34,7 +37,7 @@
     "expo-router": "~6.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.1.1",
     "react-native": "^0.81.4",
     "react-native-clipboard": "^0.0.5",
     "react-native-safe-area-context": "~5.6.0",
@@ -44,6 +47,7 @@
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
@@ -55,8 +59,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-unused-imports": "^4.2.0",
+    "jest": "^30.2.0",
     "metro-react-native-babel-transformer": "^0.77.0",
     "prettier": "^3.6.2",
+    "react-test-renderer": "^19.1.1",
     "typescript": "~5.9.2"
   },
   "private": true
