--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-crypto": "~15.0.7",
     "expo-font": "~14.0.8",
     "expo-image-picker": "^17.0.8",
+    "expo-linear-gradient": "^15.0.7",
     "expo-router": "~6.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
